--- a/src/assets/style/responsive.css
+++ b/src/assets/style/responsive.css
@@ -88,6 +88,9 @@ p.heading{
 }
 
 @media (max-width: 992px) {
+    .disbale-nav{
+        display: block;
+    }
     .main-button{
         display: none;
     }
