--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,9 @@
   color: white;
   background: var(--primary-color);
 }
-
+.active{
+	color: var(--primary-color) !important;
+}
 h1{
 	font-family: var(--bold-faimily);
 }
